namespace OpSpark
{
  public static class Strings
  {
    public const string HORIZONTAL = "Horizontal";
    public const string VERTICAL = "Vertical";

    // TAGS //
    public const string TARGET = "Target";

    // LAYERS //
    public const string PLATFORM = "Platform";
    public const string WALL = "Wall";

    // ANIMATION BOOLS //
    public const string IS_RUNNING = "isRunning";
    public const string IS_JUMPING = "isJumping";
    public const string IS_IDLING = "isIdling";
    public const string IS_SLIDING = "isSliding";
    public const string IS_FLYING = "isFlying";

    // ANIMATION TRIGGERS //
    public const string FIRE = "fire";
    public const string JUMP = "jump";
    public const string EXPLODE = "explode";
    public const string SLIDE = "slide"; // TODO: remove?


    // STATE NAMES //
    public const string STATE_IDLE = "Idle";
    public const string STATE_FIRE = "Fire";
    public const string STATE_JUMP = "Jump";
    public const string STATE_RUN = "Run";
    public const string STATE_IDLING = "Idling";
    public const string STATE_FIRING = "Firing";
    public const string STATE_JUMPING = "Jumping";
    public const string STATE_RUNNING = "Running";
    public const string STATE_FLYING = "Flying";
    public const string STATE_SLIDING = "Sliding";

    // SCENES //
    public const string LOBBY = "Lobby";
    public const string GAME = "Game";
    public const string GAME_OVER = "GameOver";
    public const string WIN = "Win";
  }
}
